// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page /> Should render given background color 1`] = `
"%PDF-1.7
%����
9 0 obj
<<
/Keywords ()
/CreationDate (D:20170422014110)
/Creator (react-pdf)
/Producer (react-pdf)
>>
endobj
10 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
11 0 obj
<<
/Type /Catalog
/Pages 12 0 R
>>
endobj
12 0 obj
<<
/Type /Pages
/Kids [13 0 R]
/Count 1
>>
endobj
13 0 obj
<<
/Type /Page
/Parent 12 0 R
/Contents [16 0 R 15 0 R ]
/Resources 14 0 R
/MediaBox [0 0 2383.93994140625 3370.389892578125]
>>
endobj
16 0 obj
<<
/Length 16
>>
stream
/DeviceRGB cs



endstream
endobj
15 0 obj
<<
/Length 31
>>
stream
1 0 0 -1 0 3370.389892578125 cm
endstream
endobj
14 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 10 0 R>>
>>
endobj
xref
0 9
0000000000 65535 f
0000000015 00000 n
0000000125 00000 n
0000000206 00000 n
0000000257 00000 n
0000000316 00000 n
0000000610 00000 n
0000000528 00000 n
0000000461 00000 n
trailer
<<
/Size 8
/Root 11 0 R
/Info 9 0 R
>>
startxref
674
%%EOF"
`;

exports[`<Page /> Should render given size 1`] = `
"%PDF-1.7
%����
1 0 obj
<<
/Keywords ()
/CreationDate (D:20170422014110)
/Creator (react-pdf)
/Producer (react-pdf)
>>
endobj
2 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
3 0 obj
<<
/Type /Catalog
/Pages 4 0 R
>>
endobj
4 0 obj
<<
/Type /Pages
/Kids [5 0 R]
/Count 1
>>
endobj
5 0 obj
<<
/Type /Page
/Parent 4 0 R
/Contents [8 0 R 7 0 R ]
/Resources 6 0 R
/MediaBox [0 0 595.280029296875 841.8900146484375]
>>
endobj
8 0 obj
<<
/Length 16
>>
stream
/DeviceRGB cs



endstream
endobj
7 0 obj
<<
/Length 31
>>
stream
1 0 0 -1 0 841.8900146484375 cm
endstream
endobj
6 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 2 0 R>>
>>
endobj
xref
0 9
0000000000 65535 f
0000000015 00000 n
0000000125 00000 n
0000000205 00000 n
0000000254 00000 n
0000000311 00000 n
0000000598 00000 n
0000000517 00000 n
0000000451 00000 n
trailer
<<
/Size 8
/Root 3 0 R
/Info 1 0 R
>>
startxref
660
%%EOF"
`;

exports[`<Page /> Should render landscape page 1`] = `
"%PDF-1.7
%����
17 0 obj
<<
/Keywords ()
/CreationDate (D:20170422014110)
/Creator (react-pdf)
/Producer (react-pdf)
>>
endobj
18 0 obj
<<
/Type /Font
/Subtype /Type1
/Name /F1
/BaseFont /Helvetica
>>
endobj
19 0 obj
<<
/Type /Catalog
/Pages 20 0 R
>>
endobj
20 0 obj
<<
/Type /Pages
/Kids [21 0 R]
/Count 1
>>
endobj
21 0 obj
<<
/Type /Page
/Parent 20 0 R
/Contents [24 0 R 23 0 R ]
/Resources 22 0 R
/MediaBox [0 0 595.280029296875 841.8900146484375]
>>
endobj
24 0 obj
<<
/Length 102
>>
stream
/DeviceRGB cs
1 0.38823529411764707 0.2784313725490196 scn
0 0 595.280029296875 841.8900146484375 re
f
endstream
endobj
23 0 obj
<<
/Length 31
>>
stream
1 0 0 -1 0 841.8900146484375 cm
endstream
endobj
22 0 obj
<<
/ProcSet [/PDF/Text]
/Font <</F1 18 0 R>>
>>
endobj
xref
0 9
0000000000 65535 f
0000000015 00000 n
0000000126 00000 n
0000000207 00000 n
0000000258 00000 n
0000000317 00000 n
0000000698 00000 n
0000000616 00000 n
0000000462 00000 n
trailer
<<
/Size 8
/Root 19 0 R
/Info 17 0 R
>>
startxref
762
%%EOF"
`;
